# evodcinv

./: .buildinfo  .travis.yml  CITATION.cff  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  genindex.html  github_deploy_key_keurfonluu_evodcinv.enc  index.html  objects.inv  search.html  searchindex.js  setup.cfg  setup.py  tasks.py
.doctrees/: environment.pickle  index.doctree
.doctrees/api/: curve.doctree  index.doctree  layer.doctree  model.doctree  result.doctree
.github/: sample.py
.github/workflows/: ci.yml
_modules/: index.html
_modules/evodcinv/: _curve.html  _layer.html  _model.html  _result.html
_sources/api/: index.rst.txt
api/: curve.html  index.html  layer.html  model.html  result.html
doc/source/: conf.py  index.rst
evodcinv/: __about__.py  __init__.py  _common.py  _curve.py  _helpers.py  _io.py  _layer.py  _model.py  _progress.py  _result.py  _solver.py  compile.bat  compile.sh  dispersion_curve.py  layered_model.py  progression.py  stratified_model.py  thomson_haskell.py
evodcinv/_io/: __init__.py  _helpers.py
evodcinv/f90/: dispcurve.f90  lay2vel.f90
evodcinv/factory/: __init__.py  _extra_terms.py
example_chemery/: dcinv.py  mode0.txt  mode1.txt  mode2.txt  model.txt  mpi_dcinv.sh  view_data.py  view_results.py
example_chemery/best/: best_mode0.txt  best_mode1.txt  best_mode2.txt
examples/: example_dc.py  example_dcinv.py  example_dcres.py  example_dcres_view.py  example_rayleigh_dcinv.py  love_picks.txt  mpi_dcinv.sh  pbs_mpi.sh
test/: helpers.py  test_model.py
tests/: helpers.py  test_model.py
(+58 files in other folders)
