[metadata]
name = evodcinv
version = 2.0.0
author = Keurfon Luu
email = keurfonluu@outlook.com
description = Inversion of dispersion curves using Evolutionary Algorithms
url = https://github.com/keurfonluu/evodcinv
project_urls =
    Code=https://github.com/keurfonluu/evodcinv
    Issues=https://github.com/keurfonluu/evodcinv/issues
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD 3-Clause License
platforms = any
classifiers =
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    importlib_metadata
    numpy
    matplotlib
    joblib
    h5py
    progress
    disba >= 0.6.1
    stochopy >= 2.2.0
python_requires = >= 3.6
setup_requires =
    setuptools >= 42
    wheel